welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: ')' expected but 'while' found.
  while (nbrPas!=0) {
  ^